# protein_function

./: .gitignore  CMakeLists.txt  readme.md
baseline/: CMakeLists.txt
baseline/blast_predict_main/: CMakeLists.txt  blast_predict_main.cpp
baseline/protein_graynet_main/: CMakeLists.txt  protein_graynet_main.cpp
common/: CMakeLists.txt  common_basic.h
data_class/: CMakeLists.txt  go_term.cpp  go_term.h  protein_profile.cpp  protein_profile.h  protein_sequence.cpp  protein_sequence.h
data_processing/: CMakeLists.txt
data_processing/select_cafa1_dataset_main/: CMakeLists.txt  select_cafa1_dataset_main.cpp
data_processing/select_data_set_main/: CMakeLists.txt  select_data_set_main.cpp
graynet/: CMakeLists.txt
graynet/examples/mnist/: CMakeLists.txt  MNIST.cpp
graynet/graynet/: CMakeLists.txt  Device.cpp  Device.h  Expression.cpp  Expression.cu  Expression.h  Expression_p.h  Graph.cpp  Graph.h  Layer.cpp  Layer.h  Node.cpp  Node.h  Optimizer.cpp  Optimizer.h  Shape.h  Tensor.cpp  Tensor.h  Utils.cpp  Utils.h  graynet.h  initializer_view.h
graynet/test/: CMakeLists.txt  TestNodes.cpp
learning/: CMakeLists.txt  evaluation.cpp  evaluation.h
mess/: CMakeLists.txt
mess/mess_blast_predict_main/: CMakeLists.txt  mess_blast_predict_main.cpp
mess/mess_parse_go_data_main/: CMakeLists.txt  mess_parse_go_data_main.cpp
mess/mess_statistic_main/: CMakeLists.txt  mess_statistic_main.cpp
unit_test/: CMakeLists.txt
unit_test/unit_test_diff_file/: CMakeLists.txt  unit_test_diff_file_main.cpp
unit_test/unit_test_protein_goa_main/: CMakeLists.txt  unit_test_protein_goa_main.cpp
unit_test/unit_test_protein_sequence_main/: CMakeLists.txt  unit_test_protein_sequence_main.cpp
unit_test/unit_test_select_data_main/: CMakeLists.txt  unit_test_select_data_main.cpp
